# Groove2DrumVST

./: .gitignore  CMakeLists.txt  README.md
EvaluationSessionWithRaul/Sessions/: Readme.rtf
EvaluationSessionWithRaul/Sessions/Template Project/: Template.als
EvaluationSessionWithRaul/Sessions/Template Project/Backup/: Template [2023-02-22 101505].als  Template [2023-02-22 101637].als
EvaluationSessionWithRaul/Sessions/test1 Project/: test1.als  test2.als  test3.als  test4.als  test5.als  test6.als
EvaluationSessionWithRaul/Sessions/test1 Project/Backup/: test2 [2023-02-22 113613].als  test3 [2023-02-22 115633].als  test4 [2023-02-22 121254].als  test6 [2023-02-22 142446].als
Groove2Drum/: CMakeLists.txt
Groove2Drum/Groove2Drum/: CMakeLists.txt  libtorch_setup.cmake
Groove2Drum/Groove2Drum/Documentations/: MIDI Fx Plugin.goodnotes  ProcessDiagram.drawio
Groove2Drum/Groove2Drum/PretrainedModels/: README.md
Groove2Drum/Groove2Drum/PretrainedModelsSerialization/: README.md  SerializeModels.py  SerializeModelsToONNX.py  params.py
Groove2Drum/Groove2Drum/PretrainedModelsSerialization/BaseGrooveTransformers/models/: train.py  transformer.py  utils.py
Groove2Drum/Groove2Drum/PretrainedModelsSerialization/serializedONNX/: model_4.onnx
Groove2Drum/Groove2Drum/Source/: AbstractFifos.h  CustomLoggerTextEditors.h  InterThreadFifos.h  LockFreeQueueTemplate.h  Models_API.h  MonotonicGrooveTransformerV1.cpp  MonotonicGrooveTransformerV1.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorMethods.h  ProcessorToGuiQueueManagerThread.h  Representations.h  queue62.hpp  settings.h
Groove2Drum/Groove2Drum/Source/Includes/: CustomStructs.h  CustomStructsAndLockFreeQueue.h  LockFreeQueueTemplate.h  Representations.h  UtilityMethods.h
Groove2Drum/Groove2Drum/Source/Model/: ModelAPI.cpp  ModelAPI.h  MonotonicV1ModelAPI.cpp  MonotonicV1ModelAPI.h  VAE_V1ModelAPI.cpp  VAE_V1ModelAPI.h  modelsAPI.h
Groove2Drum/Groove2Drum/Source/ProcessingThreads/: GrooveThread.cpp  GrooveThread.h  ModelThread.cpp  ModelThread.h
Groove2Drum/Groove2Drum/Source/ProcessorThreads/: APVTSMediatorThread.h  BackgroundMidiBufferProcessor.cpp  BackgroundMidiBufferProcessor.h  GrooveThread.cpp  GrooveThread.h  ModelThread.cpp  ModelThread.h
Groove2Drum/Groove2Drum/Source/gui/: CustomGuiTextEditors.cpp  CustomGuiTextEditors.h  CustomUIWidgets.h  GeneratedDrumsPianoRoll.h  InteractiveMonotonicGroovePianoRoll.h  InteractiveMonotonicGrooveSingleRow.h  InteractivePianoRollBlock.h  MultiTabComponent.h  Parameters.h  PianoRollWidgets.h  PianoRoll_GeneratedDrums.h  PianoRoll_GeneratedDrums_SingleVoice.h  PianoRoll_InteractiveIndividualBlock.h  PianoRoll_InteractiveMonotonicGroove.h
Groove2Drum/Groove2Drum/Source/includes/: Representations.h  UtilityMethods.h
MidiFXTemplate/: CMakeLists.txt
MidiFXTemplate/MidiFXTemplate/: CMakeLists.txt
MidiFXTemplate/MidiFXTemplate/Source/: CustomLoggerTextEditors.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorMethods.h  settings.h
